# Bincoular-Vision

calib_bino/: CMakeLists.txt  bi_cam.cpp  main.cpp
calib_bino/chessboard/: chessboard.py
calib_bino/imglist/: stereo_calib.xml
calib_mono/: VID5.xml  calibration.cpp  out_camera_data.yml  stereo_calib.xml
cameracalibration/: CMakeLists.txt  cameracalibration.cpp
disparity/: CMakeLists.txt  disparity.cpp
pictcollect/: CMakeLists.txt  pictcollect.cpp
samples/: CMakeLists.txt  README.md
samples/calib/: CMakeLists.txt  extrinsics.yml  intrinsics.yml  stereo_calib.cpp  stereo_calib.xml
samples/cmake/: DetectOpenCV.cmake
samples/src/: camera.cc  camera2.cc  camera3.cc  camera_ctrl.cc  camera_kitti.cc  intrinsics.yml
samples/src/compat/: compat.cc  compat.h
samples/src_copy/: camera2.cc  camera_test.cc  camera_with_plugin.cc  extrinsics.yml
samples/src_copy/dataset/: dataset.cc  dataset.h
samples/src_copy/plugin/: plugin_ocv_bm.cc
triangulation/: CMakeLists.txt  triangulation.cpp
